upgraded to Java 17